Fix so that links aren't displayed blue on mobile.

--- a/style.css
+++ b/style.css
@@ -11,12 +11,9 @@ body {
 	line-height: 1.5;
 }
 
-a {
-	text-decoration: none;
-}
-
-a:visited {
+a, a:visited {
 	color: black;
+	text-decoration: none;
 }
 
 header {
